# TP3_ProjectiveRendering

./: CMakeLists.txt  README.md
src/discrete/: bresenham.cpp
src/image/: drawer.cpp  drawer.hpp
src/image/io/: image_ppm.cpp  image_ppm.hpp
src/lib/3d/: vec4.cpp  vec4.hpp
src/lib/mesh/format/: mesh_io_obj.cpp  mesh_io_obj.hpp
src/local/: main.cpp
src/render_engine/: render_engine.cpp  render_engine.hpp
